# weirwood-net

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  railway.json  ruff.toml
backend/app/: config.py  database.py  errors.py  main.py  rate_limit.py
backend/app/models/: __init__.py  analysis.py  connection.py  event.py  prophecy.py  spend_log.py
backend/app/routers/: analyze.py  connections.py  events.py  export.py  graph.py  predict.py  prophecies.py
backend/app/seed/: events.json  loader.py  prophecies.json
backend/app/services/: prompts.py  spend.py  streaming.py  weirwood.py
backend/tests/: conftest.py  test_connections.py  test_events.py  test_export.py  test_graph.py  test_prophecies.py  test_spend.py  test_streaming.py
docs/: ARCHITECTURE.md  PROMPTS.md  SEED_DATA.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/api/: client.ts  events.ts  graph.ts  prophecies.ts  sse.ts
frontend/src/components/connections/: ConnectionCard.tsx  SpokeGraph.tsx
frontend/src/components/graph/: ForceGraph.tsx  GraphControls.tsx  GraphLegend.tsx  scales.ts
frontend/src/hooks/: useSSE.ts
frontend/src/pages/: About.tsx  Dashboard.tsx  FulfillmentAnalyzer.tsx  GraphExplorer.tsx  ProphecyDetail.tsx  TWOWPredictions.tsx
frontend/src/tests/: sse.test.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
(+15 files in other folders)
