[project]
name = "weirwood-backend"
version = "0.1.0"
description = "ASOIAF Prophecy Tracker & Connection Engine — Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.20",
    "anthropic>=0.40",
    "sse-starlette>=1.8",
    "pydantic-settings>=2.1",
    "slowapi>=0.1.9",
    "greenlet>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
